# Personal_AI-Driven_UE_Log_Analyzer

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_ORIGINAL_PROMPT.md  01_AGENT_TASK_BREAKDOWN.md  02_AI_DEVELOPMENT_LOG.md  03_HUMAN_REVIEW_NOTES.md  06_TEST_REPORT.md  07_RETROSPECTIVE.md  08_MCP_STDIO_SERVER.md  09_AI_NATIVE_WORKFLOW.md  10_ADVANCED_DIAGNOSTIC_AGENTS.md  AI_WORKFLOW.md  HOOK_DESIGN.md  MCP_DESIGN.md  PRD.md  PROJECT_MEMORY.md  RETROSPECTIVE.md  SKILL_DESIGN.md  TECHNICAL_DESIGN.md  TEST_REPORT.md  USAGE_GUIDE.md
examples/reports/: blueprint_compile_error_report.md  full_diagnostics_report.md  hotpatcher_linkersave_assertion_report.md  packaging_failed_report.md
experiments/ai_autonomous_run/: AI_PLAN.md  GENERATED_OUTPUT.md  PROMPT.md  RETROSPECTIVE.md  TEST_RESULT.md
hooks/: after_code_change.py  pre_commit_scan.py
skills/ue-log-analysis/: SKILL.md
src/ue_log_analyzer/: __init__.py  analyzer.py  auto_fix_agent.py  blueprint_analyzer.py  classifier.py  cli.py  detector.py  mcp_server.py  mcp_stdio_server.py  models.py  plugin_checker.py  project_scanner.py  reader.py  report.py  rules.py
tests/: conftest.py  test_analyzer.py  test_auto_fix_agent.py  test_blueprint_analyzer.py  test_cli.py  test_hooks.py  test_mcp_server.py  test_plugin_checker.py  test_reader.py  test_report.py  test_rules.py
