[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-driven-ue-log-analyzer"
version = "0.1.0"
description = "Local AI-assisted Unreal Engine log analyzer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Native UE Tooling" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
ue-log-analyzer = "ue_log_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
