[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-driven-ue-log-analyzer"
version = "0.1.0"
description = "Local AI-assisted Unreal Engine log analyzer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Native UE Tooling" }
]
dependencies = [
  "mcp>=1.2.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
ue-log-analyzer = "ue_log_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
